// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`additional workflow can be added 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

version: 2.1
orbs:
  hello: world:2.0
workflows:
  workflow1:
    jobs:
      - job1:
          context:
            - context1
      - job2:
          name: customName2
  workflow3:
    jobs:
      - job3:
          context:
            - context3
"
`;

exports[`full spec of api should be provided 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

version: 2.1
orbs:
  hello: world:2.0
jobs:
  custom-job-1:
    docker:
      - image: golang:alpine
        environment:
          GO111MODULE: true
    working_directory: .
    machine:
      image: node:alpine
    steps:
      - checkout
      - run:
          command: |-
            echo $HELLOW_WORLD
            echo this is multiline
    parameters:
      job1Param:
        description: job1Param description
        type: string
        default: job1Param default
workflows:
  workflow1:
    when:
      or:
        - equal:
            - main
            - << pipeline.git.branch >>
        - equal:
            - staging
            - << pipeline.git.branch >>
    triggers:
      - schedule:
          cron: 0 0 * * *
          filters:
            branches:
              only:
                - main
                - beta
    jobs:
      - job1:
          name: renamedJob2
          matrix:
            parameters:
              version:
                - 0.1
                - 0.2
                - 0.3
              platform:
                - macos
                - windows
                - linux
          install-yarn: true
          node_version: 16.13
      - checkout
"
`;

exports[`orb with the same id can not be added 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

version: 2.1
orbs:
  hello: world:2.0
workflows:
  workflow1:
    jobs:
      - job1:
          name: renamedJob2
"
`;
